Add 'about' content.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: ctr_peach                         # the main title
 
-tagline: Developer blog.  # it will display as the sub-title
+tagline: programmer @Microsoft. views are my own. [he/him].  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   Developer blog covering topics on cpp, system's programming, and more.
