--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: ctr_peach                         # the main title
 tagline: programmer @Microsoft. views are my own. [he/him].  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  Developer blog covering topics on cpp, system's programming, and more.
+  Developer blog on programming languages, systems programming, and reverse engineering.
 
 # Replace with your domain, e.g. 'https://username.github.io'
 url: 'https://blog.keha.dev/'
