Add support for "image_rel" in post Front Matter.
This allows a post to provide a relative image URL to use for its page's OpenGraph image metadata (used by many sites including Twitter to show a link thumbnail).

--- a/_config.yml
+++ b/_config.yml
@@ -104,6 +104,7 @@ defaults:
         -
           label: Posts
           url: /
+      # author: "@ctr_peach" uncomment this to get jekyll-seo-tag to use it for twitter:creator (but it breaks classic author meta)
   -
     scope:
       path: _drafts
