Add image dimensions to fix warning from Facebook link validator.
The provided 'og:image' properties are not yet available because new images are processed asynchronously. To ensure shares of new URLs include an image, specify the dimensions using 'og:image:width' and 'og:image:height' tags.

--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,10 @@ defaults:
     scope:
       path: ""
     values:
-      image: /assets/img/profile.jpg
+      image:
+        path: /assets/img/profile.jpg
+        width: 460
+        height: 460
   -
     scope:
       path: ""          # An empty string here means all files in the project
