Add 'Connect with me' section to post tmeplate.

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: ctr_peach                         # the main title
+title: Kevin Hartman                        # the main title
 
 tagline: programmer @Microsoft. views are my own. [he/him].  # it will display as the sub-title
 
